--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-validators = "*"
 click = "*"
+gitpython = "*"
 trafaret = "*"
 trafaret-config = "*"
+validators = "*"
 
 [dev-packages]
 
