--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ cdktf-cdktf-provider-google = "*"
 python-slugify = "*"
 marshmallow-dataclass = "*"
 marshmallow-enum = "*"
+yaspin = "*"
+mypy = "*"
 
 [dev-packages]
 
