--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 typecheck:
     image: python:3.8
+    before_script:
+        - pip3 install pipenv
     script:
         - pipenv install
         - pipenv run mypy ctfkit
