--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,17 @@
 typecheck:
+    stage: test
     image: python:3.8
     before_script:
         - pip3 install pipenv
     script:
         - pipenv install
         - pipenv run mypy ctfkit
+
+unittest:
+    stage: test
+    image: python:3.8
+    before_script:
+        - pip3 install pipenv
+        - pipenv install
+    script:
+        - pipenv run python3 -m unittest tests/*.py
