Node installation is required by the cdktf

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ typecheck:
 unittest:
     stage: test
     image: python:3.8
+    before_script:
+        - apk add nodejs
     script:
         - pipenv run python3 -m unittest discover tests
 
