--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ unittest:
         - pipenv install
     script:
         - pipenv run python3 -m coverage run -m unittest discover tests -b
-        - pipenv run coverage xml
+        - pipenv run python3 -m coverage xml
     artifacts:
         reports:
             cobertura: coverage/cobertura-coverage.xml
