--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,9 @@ yaspin = "*"
 mypy = "*"
 pylint-gitlab = "*"
 pylint-enums = "*"
+strictyaml = "*"
+coverage = "*"
+cdktf-cdktf-provider-azurerm = "*"
 
 [dev-packages]
 
