--- a/example/challs/01-test/challenge.yml
+++ b/example/challs/01-test/challenge.yml
@@ -4,13 +4,14 @@ points: 10
 category: pwn
 author: 0xLaPoutre
 files:
-    - chall.jpg
-container:
-    - proto: tcp
-      port: 1337
-    - proto: udp
-      port: 71337
-
+  - chall.jpg
+containers:
+  - image: nginx:latest
+    ports:
+      - proto: tcp
+        port: 1337
+      - proto: udp
+        port: 71337
 # Not implemented yet:
 # vm:
 #     idk mate but it's for virtual machines
