Added basic wireguard configuration managment - Manage deployment of wireguard server + service - Reads teams and members from a static file - Generate clients configurations when everything is deployed

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pylint-enums = "*"
 cdktf-cdktf-provider-azurerm = "*"
 cdktf-cdktf-provider-kubernetes = "*"
 pyyaml = "*"
+pynacl = "*"
 
 [dev-packages]
 mypy = "*"
