Improved variables linking between gke and k8s + upgrade to new terraform cdk

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,9 @@ pynacl = "*"
 mypy = "*"
 coverage = "*"
 pylint = "*"
+mkdocs = "*"
+mkdocs-click = "*"
+mkdocs-material = "*"
 
 [requires]
 python_version = "3"
