--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click==8.0.1
 constructs==3.3.75; python_version >= '3.6'
 decorator==5.0.9; python_version >= '3.5'
 docker==5.0.0
+furo
 gitdb==4.0.7; python_version >= '3.4'
 gitpython==3.1.17
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -27,6 +28,7 @@ marshmallow-enum==1.5.1
 marshmallow==3.12.1; python_version >= '3.5'
 mccabe==0.6.1
 mypy-extensions==0.4.3
+myst_parser
 publication==0.0.3
 pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pylint-enums==0.0.5
